# for_cv

./: .gitignore  README.md
Strassen_matrix_production/: README.md  matrix_input.txt  my_generate_matrixes.cpp  my_matrix_production.cpp
base_converter/: CMakeLists.txt  README.md  my_anybase_convertion_to_anybase.cpp
base_converter/src/: CMakeLists.txt  main.cpp  my_converter.cpp  my_converter.h
base_converter/tests/: CMakeLists.txt  my_test_converter.cpp
binary_operations/: CMakeLists.txt  README.md
binary_operations/built/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
binary_operations/built/Testing/Temporary/: CTestCostData.txt
binary_operations/built/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake  my_binary
binary_operations/built/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  my_binary_tests
binary_operations/src/: CMakeLists.txt  main.cpp  my_binary_operations.cpp  my_binary_operations.h
binary_operations/tests/: CMakeLists.txt  my_test_binary.cpp
bot/: .binance_client.cpp.un~  .binance_client.hpp.un~  .bot.cpp.un~  .bot1.cpp.un~  .ladder_strategy.cpp.un~  .ladder_strategy.h.un~  .main.cpp.un~  CMakeLists.txt
bot/include/: .binance_client.cpp.un~  .binance_client.hpp !.un~  .binance_client.hpp.un~  .binance_client1.hpp.un~  .bot.cpp.un~  .ladder_strategy.cpp.un~  .ladder_strategy.h.un~  .logging.h.un~  CMakeCache.txt  cmake_install.cmake  ladder_strategy.h
bot/logs/: orders.txt
bot/src/: .binance_client.cpp.un~  .bot.cpp.un~  .ladder_strategy.cpp.un~  binance_client.cpp  ladder_strategy.cpp  logging.h
bot_binance/: README.md  config.json  main.cpp
bot_binance/include/: Makefile  binance_client.hpp  iexchange.h
bot_binance/include/build_old_1755533167/: CMakeCache.txt
bot_binance/logs/: bot_output.txt
bot_binance/src/: bot.cpp  logging.cpp
cpp23_modules_fs/: CMakeLists.txt  README.md  main.cpp  my_module.cpp
parquet_library_data_analytics/: README.md  bn_depth_spot_DFUSDT_2025_7_2.parquet  bn_trade_spot_DFUSDT_2024_4_23.csv  bn_trade_spot_DFUSDT_2024_4_23.parquet  bn_trade_spot_DFUSDT_2025_8_10.parquet  bn_trade_spot_DFUSDT_2025_9_1.parquet  bn_trade_spot_DFUSDT_2025_9_14.parquet  parquet2csv.cpp  parquet_audit.cpp  parquet_audit_221025.cpp  parquet_audit_new.cpp  parquet_audit_readme.txt  parquet_audit_readme_new.txt  parquet_audit_report_depth.txt  parquet_audit_report_trade.txt  parquet_bulk_audit.cpp  parquet_reader.cpp  parquet_reader_lib.cpp  parquet_reader_lib.h  parquet_top_spot_audit.cpp
smart_ptr_project/: CMakeLists.txt  README.md
smart_ptr_project/include/: my_shared_ptr.hpp  my_unique_ptr.hpp  my_weak_ptr.hpp
smart_ptr_project/src/: my_pointers.cpp
smart_ptr_project/tests/: smart_ptrs_test.cpp
